Overflow float fix

--- a/webcli/static/styles.css
+++ b/webcli/static/styles.css
@@ -92,6 +92,7 @@ header nav a {
 	padding: 2em 0 0;
 	margin: 1em auto 0;
 	border-top: 1px dotted #bbbbbb;
+	overflow: auto;
 }
 
 #main p {
